[package]
name = "ronde"
version = "0.1.0"
edition = "2021"
authors = ["Boris Faure <boris.faure@gmail.com>"]
description = "Monitor your servers and services with alerting and a simple status page"
repository = "https://github.com/borisfaure/ronde"
license = "BSD-2-Clause"
readme = "README.md"



[dependencies]
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9"
clap = { version = "4.1", features = ["derive"]}
thiserror = "1"
maud = "0.26"
chrono = "0.4.33"
