[workspace]
members = ["ronde_lib", "ronde"]
resolver = "2"

[workspace.package]
version = "1.2.3"
edition = "2021"
authors = ["Boris Faure <boris.faure@gmail.com>"]
description = "Monitor your servers and services with alerting and a simple status page"
repository = "https://github.com/borisfaure/ronde"
license = "BSD-2-Clause"
readme = "README.md"
