[workspace]
members = ["ronde_lib", "ronde", "history_renderer", "history_generator", "history_converter"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Boris Faure <boris@fau.re>"]
description = "Monitor your servers and services with alerting and a simple status page"
repository = "https://github.com/borisfaure/ronde"
license = "BSD-2-Clause"
readme = "README.md"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
