[package]
name = "history_converter"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ronde_lib = { path = "../ronde_lib" }
tokio.workspace = true
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
