[package]
name = "history_generator"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true


[dependencies]
rand = "0.10"
ronde_lib = { path = "../ronde_lib" }
tokio.workspace = true
chrono = { version = "0.4", features = ["serde"] }
