[package]
name = "ronde_lib"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true


[dev-dependencies]
tempfile = "3.10"

[dependencies]
tokio.workspace = true
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1"
maud = "0.26"
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.11.24"
blake3 = "1.5"
base64 = "0.22"
